--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel='stylesheet' href='index.css'>
   </head>
-  <body>
-    <h1>Leean</h1>
+  <body style="background-image:linear-gradient(to right, black, red, white, red, black)"> 
+    <a href="http://www.google.com">Google</a>
+    <a href="http://www.whhsny.org">WHHS</a>
+    <a href="http://www.w3schools.com">W3 schools</a>
+    <a href='page2.html'>About</a>
+    <h1 id='header' style="color: red;text-align: center; font-size: 80px;text-shadow: 4px 4px 4px black">Leean</h1>
+<p>text that will show up below the image</p>
+<p id='demo'>another paragraph</p>
+<p class='myclass'>a third paragraph</p>
+<p class='myclass'>a fourth paragraph</p>
+<button onclick='function1()'>red, green, and yellow gradient</button>
+<button onclick='function2()'>blue and white gradient</button>
+<button onclick='alert("please click OK")'>alert</button>
+<button onclick='print()'>print</button>
+<button id='button5'>red, white, and blue gradient</button>
+<script src='index.js'></script>
   </body>
 </html>
+
+
